agrego git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
 [Oo]bj/
-
+Local.testsettings
+TraceAndTestImpact.testsettings
+giledrose.test/Properties/
+giledrose.vsmdi
+giledrose/Properties/
 # mstest test results
 TestResults
 
