--- a/giledrose/giledrose.csproj
+++ b/giledrose/giledrose.csproj
@@ -41,8 +41,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Item.cs" />
+    <Compile Include="TipoNulo.cs" />
+    <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Inventory.cs" />
+    <Compile Include="Tipo1.cs" />
+    <Compile Include="Tipo2.cs" />
+    <Compile Include="Tipo3.cs" />
+    <Compile Include="Tipo4.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
