--- a/giledrose/giledrose.csproj
+++ b/giledrose/giledrose.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Item.cs" />
     <Compile Include="NullType.cs" />
     <Compile Include="Product.cs" />
+    <Compile Include="ProductFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Inventory.cs" />
     <Compile Include="Type1.cs" />
